[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
reqwest = "0.11.13"
simple_logger = "4.0.0"
tokio = { version = "1.22.0", features = ["full"] }
